Fix: Rework blurb on main page. Hide shimeji in offscreen buffer before DOM loads.

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ footer {
     width: 96px;
     height: 96px;
     right: 200px;
-    top: 100px;
+    bottom: -400px;
     cursor: grab;
     image-rendering: pixelated;
     transition: transform 0.15s linear;
@@ -70,4 +70,5 @@ footer {
     width: 100%;
     height: 100%;
     pointer-events: none;
+    opacity: .85;
 }
